-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 13
-
Component/s: hotspot
-
b23
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225829 | 14 | Matthias Baesken | P4 | Resolved | Fixed | team |
Display thread once in Internal exceptions event log lines
Currently the internal exceptions related event log - part in the hs_err file looks like this :
Internal exceptions (20 events):
Event: 9.075 Thread 0x000003ff7c971800 Exception <a .... exception-related info/signature ....> (0x00000000d930ed40)
thrown [/mydir/jdk/src/hotspot/share/oops/constantPool.cpp, line 777]
for thread 0x000003ff7c971800
One can see that the thread is displayed ***twice*** in every line, once at the beginning :
Event: 9.075 Thread 0x000003ff7c971800
and again at the end:
for thread 0x000003ff7c971800
I think the info should be displayed just once (saves a bit space and makes the output shorter).
Currently the internal exceptions related event log - part in the hs_err file looks like this :
Internal exceptions (20 events):
Event: 9.075 Thread 0x000003ff7c971800 Exception <a .... exception-related info/signature ....> (0x00000000d930ed40)
thrown [/mydir/jdk/src/hotspot/share/oops/constantPool.cpp, line 777]
for thread 0x000003ff7c971800
One can see that the thread is displayed ***twice*** in every line, once at the beginning :
Event: 9.075 Thread 0x000003ff7c971800
and again at the end:
for thread 0x000003ff7c971800
I think the info should be displayed just once (saves a bit space and makes the output shorter).
- backported by
-
JDK-8225829 Display thread once in Internal exceptions event log lines
-
- Resolved
-