8224750: Display thread once in Internal exceptions event log lines

Reviewed-by: mdoerr